home.html to index.html

--- a/reservations.html
+++ b/reservations.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <header>
-      <a href="./home.html" class="logo">Live Aqua Beach Resort</a>
+      <a href="./index.html" class="logo">Live Aqua Beach Resort</a>
       <div>
         <ul>
-          <li><a href="./home.html">Home</a></li>
+          <li><a href="./index.html">Home</a></li>
           <li>
             <a href="#" style="border-bottom: 2px solid white">Reserations</a>
           </li>
@@ -92,7 +92,7 @@
       <div class="footer-two">
         <h3>Services</h3>
         <ul>
-          <li><a href="./home.html">Home</a></li>
+          <li><a href="./index.html">Home</a></li>
           <li><a href="#">Reservations</a></li>
           <li><a href="./restaurant.html">restaurants</a></li>
         </ul>
