--- a/admin.html
+++ b/admin.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <h3>Live Aqua Beach Resort</h3>
-      <a href="./home.html">Exit</a>
+      <a href="./index.html">Exit</a>
     </header>
     <div>
       <div>
