--- a/restaurant.html
+++ b/restaurant.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <header>
-      <a href="./home.html" class="logo">Live Aqua Beach Resort</a>
+      <a href="./index.html" class="logo">Live Aqua Beach Resort</a>
       <div>
         <ul>
-          <li><a href="./home.html">Home</a></li>
+          <li><a href="./index.html">Home</a></li>
           <li>
             <a href="./reservations.html">Reserations</a>
           </li>
@@ -113,7 +113,7 @@
       <div class="footer-two">
         <h3>Services</h3>
         <ul>
-          <li><a href="./home.html">Home</a></li>
+          <li><a href="./index.html">Home</a></li>
           <li><a href="./reservations.html">Reservations</a></li>
           <li><a href="#">restaurants</a></li>
         </ul>
