--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Admin</title>
+    <title>Login</title>
     <link rel="stylesheet" href="./admin.css" />
     <script
       src="https://kit.fontawesome.com/26125200c4.js"
@@ -18,8 +18,8 @@
     <div>
       <div>
         <i class="fa-regular fa-id-card"></i>
-        <h3>Administration</h3>
-        <p>Enter the username and password to access the admin page.</p>
+        <h3>Login</h3>
+        <p>Enter the username and password.</p>
         <form action="">
           <label for="username">Username:</label>
           <input type="text" name="username" id="username" />
