--- a/reservations.html
+++ b/reservations.html
@@ -13,16 +13,16 @@
         <ul>
           <li><a href="./index.html">Home</a></li>
           <li>
-            <a href="#" style="border-bottom: 2px solid white">Reserations</a>
+            <a href="#" style="border-bottom: 2px solid white">Reservations</a>
           </li>
           <li><a href="./restaurant.html">Restaurant</a></li>
         </ul>
       </div>
-      <a href="./admin.html" class="admin">Admin</a>
+      <a href="./admin.html" class="admin">Login</a>
     </header>
     <div class="main">
       <div>
-        <img src="./assets/img-1-bg.jpg" alt="" />
+        <img src="./assets/img-1-bg.jpg" alt=""/>
         <div>
           <form action="">
             <h3>Reservations at Live Aqua</h3>
@@ -94,7 +94,7 @@
         <ul>
           <li><a href="./index.html">Home</a></li>
           <li><a href="#">Reservations</a></li>
-          <li><a href="./restaurant.html">restaurants</a></li>
+          <li><a href="./restaurant.html">Restaurants</a></li>
         </ul>
       </div>
 
