--- a/restaurant.html
+++ b/restaurant.html
@@ -13,14 +13,14 @@
         <ul>
           <li><a href="./index.html">Home</a></li>
           <li>
-            <a href="./reservations.html">Reserations</a>
+            <a href="./reservations.html">Reservations</a>
           </li>
           <li>
             <a href="#" style="border-bottom: 2px solid white">Restaurant</a>
           </li>
         </ul>
       </div>
-      <a href="./admin.html" class="admin">Admin</a>
+      <a href="./admin.html" class="admin">Login</a>
     </header>
     <div class="main">
       <div class="left-main">
@@ -115,7 +115,7 @@
         <ul>
           <li><a href="./index.html">Home</a></li>
           <li><a href="./reservations.html">Reservations</a></li>
-          <li><a href="#">restaurants</a></li>
+          <li><a href="#">Restaurants</a></li>
         </ul>
       </div>
 
