--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         <div>
           <ul>
             <li><a href="#" style="border-bottom: 2px solid white">Home</a></li>
-            <li><a href="./reservations.html">Reserations</a></li>
+            <li><a href="./reservations.html">Resevations</a></li>
             <li><a href="./restaurant.html">Restaurant</a></li>
           </ul>
         </div>
-        <a href="./admin.html" class="admin">Admin</a>
+        <a href="./admin.html" class="admin">Login</a>
       </header>
       <div>
         <p>Welcome to the <br /><span>"Live Aqua Beach Resort"</span></p>
@@ -241,7 +241,7 @@
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="./reservations.html">Reservations</a></li>
-          <li><a href="./restaurant.html">restaurants</a></li>
+          <li><a href="./restaurant.html">Restaurants</a></li>
         </ul>
       </div>
 
